# ESP32-Audio-Controller

./: .env.exmpl  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  audiodata.hpp  main.cpp  vcpkg.json
cpp/: main.cpp  spotify.hpp  util.hpp
ino/: main.ino
js/: auto_spotify_verify.js  package.json  start.bat  start.bat - Shortcut.lnk
